Added Bluebeard UX and PHP projects

--- a/blog.html
+++ b/blog.html
@@ -63,6 +63,21 @@
         <div class="container-xl">
             <div class="row">
 
+                <!-- ARTICLE : Maquette UX Design  -->
+                <div class="col-md-6 col-lg-3 d-flex">
+                    <div class="blog-entry justify-content-end" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
+                        <a href="blog-maquette-ux-design.html" class="block-20 img d-flex align-items-end" style="background-image: url('images/ux-design-thumbnail.webp');">
+                        </a>
+                        <div class="text">
+                            <p class="meta"> <span>11 février 2022</span>
+                                <span style="color:rgb(196, 170, 100)">UX Design</span>
+                            </p>
+                            <h3 class="heading mb-3"><a href="blog-maquette-ux-design.html">UX Design : projet complet</a></h3>
+                            <p>Un exposé complet de mon travail réalisé en UX Design pour la réalisation d'une maquette d'un site e-commerce.</p>
+                        </div>
+                    </div>
+                </div>
+
                 <!-- ARTICLE : Stage - Bachelor 1  -->
                 <div class="col-md-6 col-lg-3 d-flex">
                     <div class="blog-entry justify-content-end" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
