--- a/work.html
+++ b/work.html
@@ -64,11 +64,37 @@
             <div class="row">
 
                 <div class="col-md-4">
+                    <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-b2-bluebeard-php.webp);">
+                        <div class="overlay"></div>
+                        <div class="text text-center p-4">
+                            <h3><a href="https://github.com/nicolas-lepinay/Bachelor2_Bluebeard" target="_blank">Site e-commerce Bluebeard</a></h3>
+                            <span>Bachelor 2</span>
+                            <br>
+                            <span>PHP8, MySQL, HTML, CSS, jQuery</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+                    <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-b2-ux-design.webp);">
+                        <div class="overlay"></div>
+                        <div class="text text-center p-4">
+                            <h3><a href="blog-maquette-ux-design.html" target="_blank">Maquette UX Design</a></h3>
+                            <span>Bachelor 2</span>
+                            <br>
+                            <span>Adobe Photoshop</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
                     <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-b2-flincy.webp);">
                         <div class="overlay"></div>
                         <div class="text text-center p-4">
                             <h3><a href="https://github.com/nicolas-lepinay/Flincy" target="_blank">Flincy</a></h3>
                             <span>Stage professionnel</span>
+                            <br>
+                            <span>React, NodeJS, MongoDB, Stripe</span>
                         </div>
                     </div>
                 </div>
@@ -79,6 +105,8 @@
                         <div class="text text-center p-4">
                             <h3><a href="https://github.com/nicolas-lepinay/Bachelor1__Forum_Fairfax" target="_blank">Forum Fairfax</a></h3>
                             <span>Bachelor 1</span>
+                            <br>
+                            <span>Go, HTML, CSS</span>
                             <br>
                             <span><a href="https://www.linkedin.com/posts/aix-ynov-campus_forum-ytracker-is-over-f%C3%A9licitations-activity-6811682018653536256-h88R" target="_blank" title="LinkedIn">🥇</a> Lauréat du 1er prix</span>
 
@@ -92,6 +120,8 @@
                         <div class="text text-center p-4">
                             <h3><a href="https://github.com/nicolas-lepinay/Bachelor1__Groupie_Tracker" target="_blank">Groupie Tracker</a></h3>
                             <span>Bachelor 1</span>
+                            <br>
+                            <span>JavaScript, HTML, CSS</span>
                         </div>
                     </div>
                 </div>
@@ -102,6 +132,8 @@
                         <div class="text text-center p-4">
                             <h3><a href="https://nicolas-lepinay.github.io/Bachelor1__Clonernews/" target="_blank">Clonernews</a></h3>
                             <span>Bachelor 1</span>
+                            <br>
+                            <span>JavaScript, HTML, CSS</span>
                         </div>
                     </div>
                 </div>
@@ -112,6 +144,8 @@
                         <div class="text text-center p-4">
                             <h3><a href="https://nicolas-lepinay.github.io/Bachelor1__Superheroes/" target="_blank">Superheroes Database</a></h3>
                             <span>Bachelor 1</span>
+                            <br>
+                            <span>JavaScript, HTML, CSS</span>
                         </div>
                     </div>
                 </div>
@@ -122,6 +156,8 @@
                         <div class="text text-center p-4">
                             <h3><a href="https://github.com/nicolas-lepinay/Bachelor1_ASCII" target="_blank">ASCII Art Generator</a></h3>
                             <span>Bachelor 1</span>
+                            <br>
+                            <span>Go, HTML, CSS</span>
                         </div>
                     </div>
                 </div>
