--- a/work.html
+++ b/work.html
@@ -122,7 +122,7 @@
                             <h3><a href="https://github.com/nicolas-lepinay/Bachelor1__Groupie_Tracker" target="_blank">Groupie Tracker</a></h3>
                             <span>Bachelor 1</span>
                             <br>
-                            <span>JavaScript, HTML, CSS</span>
+                            <span>Go, HTML, CSS</span>
                         </div>
                     </div>
                 </div>
