Added ReadyPlayerMe avatar

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="row slider-text align-items-center align-items-stretch justify-content-between">
                 <div class="col-lg-6 text d-flex align-items-start align-items-sm-center">
                     <div class="desc mt-4 mt-md-0">
-                        <span class="subheading">Développeur junior</span>
+                        <span class="subheading">Développeur full stack</span>
                         <h1 class="mb-4">Nicolas Lépinay</h1>
                         <p><a href="pdf/CV - Nicolas_Lépinay.pdf" class="btn btn-primary p-4 py-3" download target="_blank">Télécharger mon CV <span class="ion-ios-arrow-round-down"></span></a> <a href="about.html" class="btn btn-white p-4 py-3">Qui suis-je ? <span class="ion-ios-arrow-round-forward"></span></a></p>
 
@@ -65,16 +65,24 @@
                     </div>
                 </div>
                 <div class="col-lg-6 d-flex align-items-end justify-content-end">
-                    <div class="carousel-about">
+
+                    <!-- <div class="carousel-about">
                         <div class="item">
-                            <!-- <img src="images/jschmidt.png" class="img-fluid" alt="Colorlib"> -->
+                            <img src="images/jschmidt.png" class="img-fluid" alt="Colorlib">
                         </div>
                         <div class="item">
-                            <!-- <img src="images/jschmidt-2.png" class="img-fluid" alt="Colorlib"> -->
+                            <img src="images/jschmidt-2.png" class="img-fluid" alt="Colorlib">
                         </div>
                         </span>
-                        <!-- <img src="images/jschmidt-2.png" class="img-fluid" alt="Colorlib"> -->
+                        <img src="images/jschmidt-2.png" class="img-fluid" alt="Colorlib">
+                    </div> -->
+
+                    <div class="no-carousel-about">
+                        <div class="item">
+                            <img src="images/readyplayerme.png" class="img-fluid" alt="Colorlib">
+                        </div>
                     </div>
+
                 </div>
             </div>
     </section>
