Added Kotlin to services

--- a/services.html
+++ b/services.html
@@ -108,7 +108,7 @@
                         <div class="icon"><span class="flaticon-app-development"></span></div>
                         <div class="text">
                             <h2>Développement mobile</h2>
-                            <p>React Native</p>
+                            <p>Kotlin</p>
                         </div>
                     </div>
                 </div>
