--- a/about.html
+++ b/about.html
@@ -255,6 +255,16 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="col-md-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600" style="opacity:0.6">
+                    <div class="progress-wrap">
+                        <h3>Kotlin <i>(en cours)</i></h3>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="5" aria-valuemax="100" style="width:5%">
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
