Added 3 new projects

--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 
 <head>
-    <title>Nicolas Lépinay | Bio</title>
+    <title>N.L | Bio</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
