--- a/blog-rem-em-px.html
+++ b/blog-rem-em-px.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Nicolas Lépinay | Article de blog</title>
+    <title>N.L | CSS : rem, em ou pixels ?</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
