--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="fr">
 
 <head>
-    <title>Nicolas Lépinay | Accueil</title>
+    <title>N.L | Accueil</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <meta name="description" content="Nicolas Lépinay - Développeur web & mobile full stack (React, Next.js, NodeJS, Go, Kotlin, PHP/Symfony)">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
 
