--- a/blog-css-bases.html
+++ b/blog-css-bases.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Nicolas Lépinay | Article de blog</title>
+    <title>N.L | Les bases du CSS</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
