--- a/blog-maquette-ux-design.html
+++ b/blog-maquette-ux-design.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Nicolas Lépinay | UX Design</title>
+    <title>N.L | Maquette d'UX Design</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
