--- a/work.html
+++ b/work.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Nicolas Lépinay | Portfolio</title>
+    <title>N.L | Portfolio</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -64,6 +64,42 @@
             <div class="row">
 
                 <div class="col-md-4">
+                    <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-b2-fairfax.webp);">
+                        <div class="overlay"></div>
+                        <div class="text text-center p-4">
+                            <h3><a href="https://github.com/nicolas-lepinay/Bachelor2__Fairfax" target="_blank">Fairfax</a></h3>
+                            <span>Bachelor 2</span>
+                            <br>
+                            <span>React, NodeJS, MongoDB</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+                    <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-b2-telegraph.webp);">
+                        <div class="overlay"></div>
+                        <div class="text text-center p-4">
+                            <h3><a href="https://github.com/nicolas-lepinay/Bachelor2__Telegraph_Messenger" target="_blank">Telegraph Messenger</a></h3>
+                            <span>Bachelor 2</span>
+                            <br>
+                            <span>Kotlin, Firebase</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+                    <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-b2-flincy.webp);">
+                        <div class="overlay"></div>
+                        <div class="text text-center p-4">
+                            <h3><a href="https://github.com/nicolas-lepinay/Flincy" target="_blank">Flincy</a></h3>
+                            <span>Stage professionnel</span>
+                            <br>
+                            <span>React, NodeJS, MongoDB, Stripe</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
                     <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-b2-bluebeard-php.webp);">
                         <div class="overlay"></div>
                         <div class="text text-center p-4">
@@ -83,18 +119,6 @@
                             <span>Bachelor 2</span>
                             <br>
                             <span>Adobe Photoshop</span>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md-4">
-                    <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-b2-flincy.webp);">
-                        <div class="overlay"></div>
-                        <div class="text text-center p-4">
-                            <h3><a href="https://github.com/nicolas-lepinay/Flincy" target="_blank">Flincy</a></h3>
-                            <span>Stage professionnel</span>
-                            <br>
-                            <span>React, NodeJS, MongoDB, Stripe</span>
                         </div>
                     </div>
                 </div>
