--- a/work.html
+++ b/work.html
@@ -64,6 +64,18 @@
             <div class="row">
 
                 <div class="col-md-4">
+                    <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-b2-ecuries.webp);">
+                        <div class="overlay"></div>
+                        <div class="text text-center p-4">
+                            <h3><a href="https://github.com/nicolas-lepinay/Bachelor2__Ecuries" target="_blank">Equestria - gestion d'écuries</a></h3>
+                            <span>Bachelor 2</span>
+                            <br>
+                            <span>React, Strapi</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
                     <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-b2-fairfax.webp);">
                         <div class="overlay"></div>
                         <div class="text text-center p-4">
