New blog articles

--- a/blog.html
+++ b/blog.html
@@ -63,6 +63,36 @@
         <div class="container-xl">
             <div class="row">
 
+            <!-- ARTICLE : Cloner un objet en JavaScript -->
+                <div class="col-md-6 col-lg-3 d-flex">
+                    <div class="blog-entry justify-content-end" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
+                        <a href="blog-js-cloning.html" class="block-20 img d-flex align-items-end" style="background-image: url('images/js-logo.webp');">
+                        </a>
+                        <div class="text">
+                            <p class="meta"> <span>15 juin 2022</span>
+                                <span class="theme">JavaScript</span>
+                            </p>
+                            <h3 class="heading mb-3"><a href="blog-js-cloning.html">Cloner un objet en JavaScript en 2022</a></h3>
+                            <p>Deep clone, shallow clone... Toutes les méthodes pour copier un objet en JavaScript en 2022.</p>
+                        </div>
+                    </div>
+                </div>
+
+            <!-- ARTICLE : Centrer une image dans une div (CSS)  -->
+                <div class="col-md-6 col-lg-3 d-flex">
+                    <div class="blog-entry justify-content-end" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
+                        <a href="blog-css-center.html" class="block-20 img d-flex align-items-end" style="background-image: url('images/css_center.webp');">
+                        </a>
+                        <div class="text">
+                            <p class="meta"> <span>22 avril 2022</span>
+                                <span class="theme">CSS</span>
+                            </p>
+                            <h3 class="heading mb-3"><a href="blog-css-center.html">CSS : centrer une image dans une div</a></h3>
+                            <p>Comment centrer une image à l'intérieur d'une div en CSS.</p>
+                        </div>
+                    </div>
+                </div>
+
                 <!-- ARTICLE : Maquette UX Design  -->
                 <div class="col-md-6 col-lg-3 d-flex">
                     <div class="blog-entry justify-content-end" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
