Added new article

--- a/experience.html
+++ b/experience.html
@@ -81,7 +81,18 @@
                             <span class="date">2020-2023</span>
                             <h2>Bachelor en Informatique</h2>
                             <span class="position"><i class="ion-ios-pin me-2"></i>Aix Ynov Campus</span>
-                            <p class="mt-4">HTML, SCSS, JavaScript, Go, C++, Python, SQLite, C#, PHP, Symfony, Java, Infrastructure & Réseau, Cybersécurité.</p>
+                            <div class="mt-4 d-flex flex-column">
+                                <span><strong>Développement web</strong></span>
+                                <span class="px-3">• Front-end : HTML, SCSS, JavaScript, React, Next.js</span>
+                                <span class="px-3">• Back-end : Go, NodeJS, PHP 8, Symfony</span>
+                                <span class="px-3">• Base de données : MySQL, SQLite, MongoDB, Firebase</span>
+                                
+                                <span class="mt-2"><strong>Développement logiciel</strong></span>
+                                <span class="px-3">C#, C++, Java, Python</span>
+                                <span class="mt-2"><strong>Développement mobile</strong></span>
+                                <span class="px-3">Kotlin, React Native</span>
+                                <span class="mt-2"><strong>Infrastructure & Réseau</strong></span>
+                            </div>
                         </div>
                     </div>
                     <div class="resume-wrap d-flex align-item-stretch" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="900">
@@ -98,13 +109,29 @@
                 <!-- EXPERIENCES PROFESSIONNELLES -->
 
                 <div class="col-md-6">
+
                     <div class="resume-wrap d-flex align-item-stretch" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400">
                         <div class="w-100">
                             <div class="icon"><span class="flaticon-work-from-home"></span></div>
-                            <span class="date">2018 - 2022</span>
+                            <span class="date">10/2021- 01/2022</span>
+                            <h2>Développeur full stack (stage)</h2>
+                            <span class="position"><i class="ion-ios-pin me-2"></i>Flincy</span>
+                            <p class="mt-4">
+                                Création d’un prototype d’une application de livraison. 
+                                <br>Implémentation d’une maquette avec React. 
+                                <br>Serveur, API et base de données avec NodeJS et MongoDB. 
+                                <br>Système de paiement sécurisé avec Stripe.js.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="resume-wrap d-flex align-item-stretch" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400">
+                        <div class="w-100">
+                            <div class="icon"><span class="flaticon-work-from-home"></span></div>
+                            <span class="date">08/2018 - 08/2022</span>
                             <h2>Réceptionniste</h2>
                             <span class="position"><i class="ion-ios-pin me-2"></i>Villa Gallici, Hôtel 5* Relais & Châteaux</span>
-                            <p class="mt-4">Accueil téléphonique et physique, gestion des réservations, comptabilité.</p>
+                            <p class="mt-4">Accueil téléphonique et physique.<br>Gestion des réservations.<br>Comptabilité.</p>
                         </div>
                     </div>
 
