--- a/blog.html
+++ b/blog.html
@@ -63,6 +63,21 @@
         <div class="container-xl">
             <div class="row">
 
+            <!-- ARTICLE : Stage Flincy (B2) -->
+                <div class="col-md-6 col-lg-3 d-flex">
+                    <div class="blog-entry justify-content-end" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
+                        <a href="blog-stage-b2.html" class="block-20 img d-flex align-items-end" style="background-image: url('images/project-b2-flincy.webp');">
+                        </a>
+                        <div class="text">
+                            <p class="meta"> <span>16 juillet 2022</span>
+                                <span class="theme">stage</span>
+                            </p>
+                            <h3 class="heading mb-3"><a href="blog-stage-b2.html">B2 : mon expérience professionnelle</a></h3>
+                            <p>Mon stage professionnel en tant que développeur full stack au sein de la startup Flincy.</p>
+                        </div>
+                    </div>
+                </div>
+
             <!-- ARTICLE : Cloner un objet en JavaScript -->
                 <div class="col-md-6 col-lg-3 d-flex">
                     <div class="blog-entry justify-content-end" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
