Finished B2 Stage article

--- a/blog-stage-b2.html
+++ b/blog-stage-b2.html
@@ -113,9 +113,35 @@
                             </div>
                         </div>
 
-       
+                    <p class="my-5">
+                        Chaque produit possède sa page avec illustration, description, prix et un bouton pour ajouter le produit aux favoris ou au panier.
+                    </p>
 
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <img src="images/Flincy/Flincy_Ingredient-2.png" alt="" class="img-fluid">
+                            </div>
+                            <div class="col-sm-6">
+                                <img src="images/Flincy/Flincy_Modal.png" alt="" class="img-fluid">
+                            </div>
+                        </div>
 
+                    <p class="my-5">
+                        La page "Panier" récapitule les produits qui ont été ajoutés et la page "Expédition" permet de choisir les détails pour le paiement et l'expédition de la commande.
+                    </p>
+
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <img src="images/Flincy/Flincy_Cart.png" alt="" class="img-fluid">
+                            </div>
+                            <div class="col-sm-6">
+                                <img src="images/Flincy/Flincy_Shipping.png" alt="" class="img-fluid">
+                            </div>
+                        </div>
+
+                    <p class="my-5 py-2">
+                        Le projet complet est accessible sur <strong class="gradient-text">GitHub</strong> <a href="https://github.com/nicolas-lepinay/Flincy" target="_blank" title="Flincy"><i class="fa fa-github"></i></a> en suivant <a href="https://github.com/nicolas-lepinay/Flincy" target="_blank" title="Flincy">ce lien</a>.
+                    </p>
 
                     <div class="tag-widget post-tag-container mb-5 mt-5">
                         <div class="tagcloud">
