--- a/experience.html
+++ b/experience.html
@@ -118,9 +118,9 @@
                             <span class="position"><i class="ion-ios-pin me-2"></i>Flincy</span>
                             <p class="mt-4">
                                 Création d’un prototype d’une application de livraison. 
-                                <br>Implémentation d’une maquette avec React. 
-                                <br>Serveur, API et base de données avec NodeJS et MongoDB. 
-                                <br>Système de paiement sécurisé avec Stripe.js.
+                                <br>Implémentation d’une maquette avec <strong>React</strong>. 
+                                <br>Serveur, API et base de données avec <strong>NodeJS</strong> et <strong>MongoDB</strong>. 
+                                <br>Système de paiement sécurisé avec <strong>Stripe.js</strong>.
                             </p>
                         </div>
                     </div>
