--- a/work.html
+++ b/work.html
@@ -70,7 +70,7 @@
                             <h3><a href="https://github.com/nicolas-lepinay/Bachelor3__Saga" target="_blank">Saga Inc.</a></h3>
                             <span>Bachelor 3</span>
                             <br>
-                            <span>Ionic, React, Strapi, Stripe</span>
+                            <span>Ionic 6, React, Strapi, Stripe</span>
                         </div>
                     </div>
                 </div>
